--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body{
   margin:0;
 }
 a {
-  font-size:30px;
-  color:black;
+  font-size:20px;
+  color;blue;
   text-decoration: none;
 }
 h1 {
@@ -18,6 +18,9 @@ ol{
   width:100px;
   margin:0;
   padding:20px;
+}
+li{
+  font-size:25px;
 }
 #grid{
   display: grid;
