--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ h1 {
   margin:0;
   padding:20px;
 }
+h2 {
+  color;blue;
+  text-decoration: none;
+}
 ol{
   border-right:1px solid gray;
   width:100px;
