--- a/style.css
+++ b/style.css
@@ -1,5 +1,42 @@
 body{
   margin:0;
+  padding-top: 75px;
+}
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
+  height: 75px;
+  padding: 1rem;
+  color: white;
+  background: teal;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h1, p {
+  margin: 0;
+}
+
+main {
+  padding: 1rem;
+  height: 100%;
+}
+
+body {
+  background: #EEE;
+}
+
+body, html {
+  height: 200%;
+}
+
+* {
+  box-sizing: border-box;
 }
 a {
   color;blue;
@@ -8,7 +45,6 @@ a {
 h1 {
   font-size:45px;
   text-align: center;
-  border-bottom:1px solid gray;
   margin:0;
   padding:20px;
 }
@@ -24,14 +60,4 @@ ol{
 }
 li{
   font-size:25px;
-}
-#grid{
-  display: grid;
-  grid-template-columns: 150px 1fr;
-}
-#grid ol{
-  padding-left:33px;
-}
-#grid #article{
-  padding-left:25px;
 }
