--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
-  margin:0;
+  top-margin:0; bottom-margin:0;
   padding-top: 75px;
+  background: #EEE;
 }
 header {
   position: fixed;
@@ -27,15 +28,6 @@ main {
   padding: 1rem;
   height: 100%;
 }
-
-body {
-  background: #EEE;
-}
-
-body, html {
-  height: 200%;
-}
-
 * {
   box-sizing: border-box;
 }
