--- a/style.css
+++ b/style.css
@@ -18,12 +18,10 @@ header {
   justify-content: space-between;
   align-items: center;
 }
-
 h1 {
   margin: 0;
   font-size: 45px;
 }
-
 main {
   padding: 1rem;
   height: 100%;
@@ -54,4 +52,7 @@ ol{
 }
 li{
   font-size:25px;
+}
+th, td {
+  text-align: center;
 }
