--- a/style.css
+++ b/style.css
@@ -53,6 +53,21 @@ ol{
 li{
   font-size:25px;
 }
-th, td {
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+/* Zebra striping */
+tr:nth-of-type(odd) {
+  background: #eee;
+}
+th {
+  background: #333;
+  color: white;
+  font-weight: bold;
+}
+td, th {
+  padding: 6px;
+  border: 1px solid #ccc;
   text-align: center;
 }
