--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ h2 {
   color: #3366ff;
   text-decoration: none;
 }
+
 ol{
   border-right:1px solid gray;
   width:100px;
@@ -52,6 +53,7 @@ ol{
 }
 li{
   font-size:25px;
+  margin-block-start: 0.6em;
 }
 table {
   width: 100%;
@@ -71,4 +73,15 @@ td, th {
   padding: 6px;
   border: 1px solid #ccc;
   text-align: center;
+}
+image-box {
+    width:380px;
+    height:220px;
+    overflow:hidden;
+    margin:0 auto;
+}
+.image-thumbnail {
+    width:100%;
+    height:100%;
+    object-fit:cover;
 }
